ejercicio struts factura

--- a/src/main/resources/org/demo/package_es.properties
+++ b/src/main/resources/org/demo/package_es.properties
@@ -4,4 +4,9 @@ form.tittle.message = Formulario de registro de facturas
 form.subject.message = Concepto:
 form.fromDate.message = Fecha desde:
 form.toDate.message = Fecha hasta:
+form.importeBruto.message = Importe bruto:
+concepto = Concepto:
+desde = Desde:
+hasta = Hasta:
+importeBruto = Importe bruto:
 
